@@ -129,6 +129,7 @@ local zoneIdDatabase = {	---------------------- zoneId database table for Region
 	[1282]	= { emoteKey = "other", },		-- Fargrave
 	[1286]	= { emoteKey = "other", },		-- The Deadlands
 	[1318]	= { emoteKey = "dc2", 	},		-- High Isle
+	[1383]	= { emoteKey = "dc2", 	},		-- Galen
 
 }
 -- ---------
@@ -232,7 +233,10 @@ local mapIdDatabase = {	-------------------------- mapId database table for City
 	[2136]	= { emoteKey = "Other", useMapBorder = true, 	}, 		-- Fargrave City District (The Bazaar)
 	[2163]	= { emoteKey = "DC", noSubZone = true,			}, 		-- Gonfalon Bay
 	[2214]	= { emoteKey = "DC", 			}, 		-- Amenos Station
-
+	[2227]	= { emoteKey = "DC", noSubZone = true,			}, 		-- Vastyr
+	[2279]	= { emoteKey = "DC", useMapBorder = true, 	}, 		-- Castle Mornard (Vastyr)
+	[2280]	= { emoteKey = "DC", useMapBorder = true, 	}, 		-- Castle Mornard (Vastyr)
+	[2281]	= { emoteKey = "DC", useMapBorder = true, 	}, 		-- Castle Mornard (Vastyr)
 }
 -- ---------
 local subZoneIdDatabase = {	---------------------- subZoneId database table for CityKeys, converted from languageTable.defaultEmotesByCity
@@ -269,6 +273,7 @@ local subZoneIdDatabase = {	---------------------- subZoneId database table for 
 	[15625]	= { emoteKey = "Other", 		},		-- Dusktown (in Blackreach Cavern)
 	[16357]	= { emoteKey = "EP", 			},		-- Karthwasten (in the Reach)
 	[17280]	= { emoteKey = "EP", 			}, 		-- Leyawiin (in Blackwood)
+	[19422]	= { emoteKey = "DC", 			}, 		-- Vastyr (in Galen)
 
 --	[2092]	= { emoteKey = "Mournhold", 	}, 		-- Mournhold Plaza of the Gods	--> no longer needed
 --	[2094]	= { emoteKey = "Mournhold", 	}, 		-- Mournhold Banking District	--> no longer needed
